UI updates to Article page. Zephr POC (commented out in article page)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,14 @@
   h3 {
     @apply text-gray-800 text-2xl font-semibold;
   }
+
+  svg {
+    @apply inline align-baseline;
+  }
+}
+
+.viafoura {
+  --reserved-space-top: 62px !important;
 }
 
 nav .viafoura,
