--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ nav .viafoura .vf-tray-trigger:focus {
   background-color: transparent;
 }
 
-/* Identifiers */
+/* Viafoura Identifiers */
 #vf-content-recirculation-container {
   min-height: 338.84px !important;
 }
@@ -39,7 +39,23 @@ nav .viafoura .vf-tray-trigger:focus {
   min-height: 800px !important;
 }
 
-/* Classes */
+/* Custom Identifiers*/
+form#vf-broadcast-notification {
+  @apply px-8 pt-6 pb-8 mt-6 mb-4 bg-white border-stone-200 border-[1px] rounded shadow-lg;
+}
+#vf-broadcast-notification label {
+  @apply text-sm font-semibold text-stone-600;
+}
+#vf-broadcast-notification input,
+#vf-broadcast-notification select,
+#vf-broadcast-notification textarea {
+  @apply w-full mt-1 mb-4 text-sm rounded text-stone-600 border-stone-300 focus:ring-stone-400;
+}
+#vf-broadcast-notification button {
+  @apply flex px-6 py-4 m-auto mt-4 mb-2 text-base text-white bg-indigo-500 rounded hover:bg-indigo-600 disabled:bg-indigo-300;
+}
+
+/* Viafoura Classes */
 .viafoura {
   --reserved-space-top: 62px !important;
 }
