Fix for focus  outline issue on VF inputs and textareas

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
     @apply bg-[#2A262B];
   }
   h1 {
-    @apply text-4xl font-bold text-gray-800 antialiased;
+    @apply text-4xl antialiased font-bold text-gray-800;
   }
   h2 {
     @apply text-3xl font-bold text-gray-800;
@@ -38,6 +38,11 @@ nav .viafoura .vf-tray-trigger:focus {
   background-color: transparent;
 }
 
+.viafoura input:focus, .viafoura textarea:focus {
+  border: none !important;
+  box-shadow: none !important;
+}
+
 /* Viafoura Identifiers */
 #vf-content-recirculation-container {
   min-height: 338.84px !important;
@@ -59,10 +64,10 @@ form#vf-broadcast-notification {
 #vf-broadcast-notification input,
 #vf-broadcast-notification select,
 #vf-broadcast-notification textarea {
-  @apply mt-1 mb-4 w-full rounded border-stone-300 text-sm text-stone-600 focus:ring-stone-400;
+  @apply w-full mt-1 mb-4 text-sm rounded border-stone-300 text-stone-600 focus:ring-stone-400;
 }
 #vf-broadcast-notification button {
-  @apply m-auto mt-4 mb-2 flex rounded bg-indigo-500 px-6 py-4 text-base text-white hover:bg-indigo-600 disabled:bg-indigo-300;
+  @apply flex px-6 py-4 m-auto mt-4 mb-2 text-base text-white bg-indigo-500 rounded hover:bg-indigo-600 disabled:bg-indigo-300;
 }
 
 /* Viafoura Classes */
