TI-559: Inter Font to Improve Performance

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,7 @@ nav .viafoura .vf-tray-trigger:focus {
 
 /* Viafoura Classes */
 .viafoura {
+  --primary-font: "Inter", sans-serif;
   --reserved-space-top: 62px !important;
 }
 .viafoura input:focus,
