--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@ nav .viafoura .vf-tray-trigger:focus {
 }
 
 /* Custom Classes */
-.broadcast-notification-link {
+.sales-menu-link {
   @apply block cursor-pointer rounded px-3 py-2 font-medium tracking-wide text-gray-800 transition-colors duration-200 hover:bg-gray-100 dark:text-white dark:hover:bg-neutral-700;
 }
 
